# Kontainer

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  BUILD.md  CMakeLists.txt  Messages.sh  README.md  io.github.DenysMb.Kontainer.desktop  io.github.DenysMb.Kontainer.json  io.github.DenysMb.Kontainer.metainfo.xml
po/: kontainer.pot
po/de/: kontainer.po
po/he/: kontainer.po
po/nl/: kontainer.po
po/pl/: kontainer.po
po/pt/: kontainer.po
src/: CMakeLists.txt  distroboxmanager.cpp  distroboxmanager.h  main.cpp
src/core/: distroboxcli.cpp  distroboxmanager.cpp  distroboxmanager.h  terminallauncher.cpp  terminallauncher.h
src/qml/: ApplicationsWindow.qml  DistroboxCreateDialog.qml  DistroboxRemoveDialog.qml  DistroboxShortcutDialog.qml  ErrorDialog.qml  FilePickerDialog.qml  Main.qml
src/qml/components/: ContainerActionsToolbar.qml  ContainerCard.qml  ContainerListStatus.qml  MainContainersPage.qml
